--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">하루, 한 줄</string>
+
+    <string name="permission_1">파일을 불러오기 위하여 접근 권한이 필요합니다.</string>
+    <string name="permission_2">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
 </resources>
